[tool.poetry]
name = "fastapi-env"
version = "0.1.0"
description = ""
authors = ["JarneDemoen <jarne.demoen@student.howest.be>"]
readme = "README.md"
packages = [{include = "fastapi_env"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
